--- a/src/pages/registrar/registrar.html
+++ b/src/pages/registrar/registrar.html
@@ -12,19 +12,19 @@
     <ion-row justify-content-center align-items-center style ="height: 10%">
         <h1>UnEat</h1>
     </ion-row>
-    <form ngSubmit="registrar()" [formGroup]="form">
+    <form (ngSubmit)="registrar()" [formGroup]="form">
         <ion-list inset>
             <ion-item>
                 <ion-label>Nombre</ion-label>
-                <ion-input type="nombre" placeholder="Chris Caliente"></ion-input>
+                <ion-input type="text" name = "nombre" formControlName = "nombre" placeholder="Chris Caliente"></ion-input>
               </ion-item>
           <ion-item>
             <ion-label>Correo</ion-label>
-            <ion-input type="correo" placeholder="Johnny@aol.com"></ion-input>
+            <ion-input type="text" name = "correo" formControlName = "correo" placeholder="Johnny@aol.com"></ion-input>
           </ion-item>
           <ion-item>
               <ion-label>Contraseña</ion-label>
-              <ion-input type="contraseña" placeholder="......"></ion-input>
+              <ion-input type="text" name = "contraseña" formControlName = "contraseña"  placeholder="......"></ion-input>
           </ion-item>
         </ion-list>
         <div padding-horizontal>
