espero que este cambio arregla los errors de abrir ionic serve

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,4 +12,10 @@
   <ion-row justify-content-center align-items-center style="height: 50%">
       <img src="../assets/icon/logo.png" height= "200">
   </ion-row>
+  <ion-list>
+    <ion-card ion-item>
+        <ion-grid>
+        </ion-grid>
+    </ion-card>
+  </ion-list>
 </ion-content>
