--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,8 +13,20 @@
       <img src="../assets/icon/logo.png" height= "200">
   </ion-row>
   <ion-list>
-    <ion-card ion-item>
+    <ion-card ion-item *ngFor="let cafeteria of cafeterias" >
         <ion-grid>
+          <ion-row>
+              <ion-title>
+                  {{cafeteria.nombre}}
+              </ion-title>
+          </ion-row>
+          <ion-row>
+              <p>
+                  Abierto: {{cafeteria.hora_de_abrir.hours}}:{{cafeteria.hora_de_abrir.minutes}} 
+                  - {{cafeteria.hora_de_cerrar.hours}}:{{cafeteria.hora_de_cerrar.minutes}} 
+              <p>
+          </ion-row>
+          
         </ion-grid>
     </ion-card>
   </ion-list>
