no mostrar las letras de contraseña en login y registrar

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,7 +20,7 @@
       </ion-item>
       <ion-item>
           <ion-label>Contraseña</ion-label>
-          <ion-input type="text" name = "correo" formControlName = "contraseña" placeholder="......"></ion-input>
+          <ion-input type="password" name = "correo" formControlName = "contraseña" placeholder="......"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Recuérdame</ion-label>
