--- a/src/pages/registrar/registrar.html
+++ b/src/pages/registrar/registrar.html
@@ -24,7 +24,7 @@
           </ion-item>
           <ion-item>
               <ion-label>Contraseña</ion-label>
-              <ion-input type="text" name = "contraseña" formControlName = "contraseña"  placeholder="......"></ion-input>
+              <ion-input type="password" name = "contraseña" formControlName = "contraseña"  placeholder="......"></ion-input>
           </ion-item>
         </ion-list>
         <div padding-horizontal>
