--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,12 +9,17 @@
 
 <ion-content>
   <br>
-  <ion-row justify-content-center align-items-center style="height: 50%">
-      <img src="../assets/icon/logo.png" height= "200">
+  <ion-row justify-content-center align-items-center>
+    <ion-title>
+      Cafeterías
+    </ion-title>
   </ion-row>
   <ion-list>
-    <ion-card ion-item *ngFor="let cafeteria of cafeterias" >
+    <ion-card ion-item dark *ngFor="let cafeteria of cafeterias" >
         <ion-card-header>
+          <ion-item>
+              <img  class="full-image" src={{cafeteria.foto_url}}>
+          </ion-item>
           <ion-card-subtitle>{{cafeteria.campus}}</ion-card-subtitle>
           <ion-card-title>{{cafeteria.nombre}}</ion-card-title>
         </ion-card-header>
