--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,20 +15,27 @@
     </ion-title>
   </ion-row>
   <ion-list>
+    
     <ion-card ion-item *ngFor="let cafeteria of cafeterias" >
-        <ion-card-header>
-          <ion-item>
-              <img style ="object-fit: cover; height:60px"  class="full-image" src={{cafeteria.foto_url}}>
-          </ion-item>
-          <ion-card-subtitle>{{cafeteria.campus}}</ion-card-subtitle>
-          <ion-card-title>{{cafeteria.nombre}}</ion-card-title>
-          Abierto: 
-          <b>{{cafeteria.hora_de_abrir.hours}}:{{cafeteria.hora_de_abrir.minutes}} 
-          - {{cafeteria.hora_de_cerrar.hours}}:{{cafeteria.hora_de_cerrar.minutes}} 
-          </b>
-        </ion-card-header>
+      <ion-row row>
+          <ion-col col-4>
+              <ion-item>
+                  <img style ="object-fit: cover; padding-top:50%" class="full-image" src={{cafeteria.foto_url}}>
+              </ion-item>
+          </ion-col>
+          <ion-col col-8>
+              <ion-card-header>
+              <ion-card-subtitle>{{cafeteria.campus}}</ion-card-subtitle>
+              <ion-card-title>{{cafeteria.nombre}}</ion-card-title>
+              Abierto: 
+              <b>{{cafeteria.hora_de_abrir.hours}}:{{cafeteria.hora_de_abrir.minutes}} 
+              - {{cafeteria.hora_de_cerrar.hours}}:{{cafeteria.hora_de_cerrar.minutes}} 
+              </b>
+              </ion-card-header>
+          </ion-col>
         <ion-card-content>
         </ion-card-content>
+      </ion-row>
     </ion-card>
   </ion-list>
 </ion-content>
