--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,5 +11,10 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-content padding>
+      <ion-item>
+      <ion-label>Nombre</ion-label>
+      <ion-input></ion-input>
+      </ion-item>
+      <button ion-button block>Guardar</button>
 </ion-content>
